--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
     "ip": "^2.0.1",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adrielaigle/Chat-P2P.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adrielaigle/Chat-P2P/issues"
+  },
+  "homepage": "https://github.com/adrielaigle/Chat-P2P#readme",
+  "description": ""
 }
